# nucleus

./: --help  .envrc  .gitignore  .gitmodules  AGENTS.md  LICENSE  Package.swift  README.md  collider-setup.sh
.github/workflows/: ci.yml
Sources/Collider/: main.swift
Sources/ColliderCommands/: Android.swift  AndroidPresentationQualification.swift  Benchmark.swift  Chromium.swift  ColliderCommand.swift  CommandSupport.swift  ComponentRegistry.swift  Doctor.swift  Install.swift  Orchestrator.swift  ProcessRunner.swift  ProfileCapture.swift  Profiling.swift  RepositoryCache.swift  RepositoryState.swift  Run.swift  Sanitizer.swift  Toolchain.swift  VulkanValidation.swift
Sources/NucleusWorkspace/: Android.swift  Benchmark.swift  BuildContract.swift  Chromium.swift  CrossLanguageABI.swift  Doctor.swift  Install.swift  Orchestrator.swift  ProcessRunner.swift  ProfileCapture.swift  Profiling.swift  PublicAPIAudit.swift  Run.swift  SDKArtifacts.swift  SHA256Verifier.swift  Sanitizer.swift  StageEngine.swift  Toolchain.swift  main.swift
Tests/ColliderCommandsTests/: ComponentRegistryTests.swift  ProfileCaptureTests.swift  VulkanValidationTests.swift
Tests/NucleusWorkspaceTests/: ChromiumCommandTests.swift  ProcessRunnerTests.swift  ProfileCaptureTests.swift  RunOptionsTests.swift  SHA256VerifierTests.swift  SemanticVersionTests.swift
android-runtime/: .gitignore  Package.swift  README.md  aosp-product.lock.json  aosp.lock.json  gfxstream.lock.json
android-runtime/scripts/: prepare-aosp-source  qualify-phase1-graphics  verify-aosp-source-lock
cef/: README.md  apt-deps.txt  build.sh
cef/patches/: 0001-cef-osr-dmabuf-and-frame-scheduling.patch  0001-native-dmabuf-capture-and-transport.patch  0001-osr-dmabuf-transport-and-external-frame-scheduling.patch  0001-viz-offscreen-output-transport.patch  0002-cef-osr-dmabuf-and-frame-scheduling.patch  0002-preserve-cef-osr-device-scale.patch  0002-viz-populate-native-handle-capture.patch  0003-treat-reaped-child-as-terminated.patch  0003-vulkan-enable-linux-dmabuf-contract.patch  0004-pin-vulkan-device.patch  0004-transparent-overlay-scrollbar-track.patch  0005-guard-x11-osr-menu-positioning.patch  0005-pin-vulkan-to-noctalia-device.patch  0005-preserve-cef-osr-device-scale.patch  0006-gate-osr-proxy-for-chromium-builds.patch  0006-treat-reaped-child-as-terminated.patch  0007-scope-crashpad-handler-by-product.patch  0007-transparent-overlay-scrollbar-track.patch  0008-guard-x11-osr-menu-positioning.patch  0009-enable-vaapi-graphite-dawn-vulkan.patch
cef/scripts/: atomic-publish-directory-test.py  atomic-publish-directory.py  cef-env.sh
chromium/: Package.swift  README.md  build.sh  diagnose-browser.sh  install-browser.sh  product.sh
chromium/launcher/: nucleus-browser
chromium/scripts/: build-metadata-test.py  build-metadata.py  build-support.sh  chromium-env.sh  doctor.sh  patch-stack.sh  prune-cache-test.py  prune-cache.py
collider/: Package.swift
collider/engine/: Package.swift
compositor/: .gitignore  README.md
compositor/compositor/: Package.swift
compositor/compositor-core/: Package.swift
compositor/docs/: render-benchmarking.md
compositor/scripts/: run-vk-validation.sh
compositor/tools/: capture-compositor-freeze.sh  verify-libcxx-single-source.sh
config/: build-contract.json
core/: .clang-format  .envrc  .gitignore  .prettierignore  CMakePresets.json  LICENSE-APACHE  LICENSE-MIT  Package.swift  README.md  babel.config.js  eslint.config.mjs  package.json  rustfmt.toml  tsconfig.json
core/android/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
core/docs/: README.md  android-render-stack-plan.md  android-swift-java-migration.md  app-runtime-roadmap.md  appkit-api-plan.md  bar-first-port-order.md  bounds-origin-model.md  compositor-accessibility-direction.md  compositor-configuration-system.md  compositor-trackpad-gestures.md  drm-color-debugging.md  drm-scanout-nvidia.md  image-file-loading.md  linux-kernel-leverage.md  naming-and-core-split-migration.md  noctalia-port-priorities.md  noctalia-ui-realignment.md  nucleon-renderer-platform-split.md  nucleus-session-contract.md  render-benchmarking.md  repo-decomposition.md  rn-animation-backend-plan.md  rn-networking-and-websocket-plan.md  rn-turbomodule-inventory.md  screen_recording_plan.md  shared-infrastructure.md  shell-architecture.md  swift-cxx-stdlib-cleanup-catalog.md  swift-toolchain.md  text-glyph-dilation-plan.md  toolchain-sdk-ci-cd-plan.md  ui-authoring-model.md  view-pixel-alignment-plan.md  wayland_protocol_coverage_plan.md  wwdc26-swift-whatsnew.txt
core/foundation/: log_prefix.cpp  log_prefix.h
core/patches/: react-native-reanimated@4.4.0-nightly-20260409-b9828e8a3.patch  react-native-wgpu.patch
core/platform-android/: Package.resolved  Package.swift
core/swiftpm/cmake/reactnative/: CMakeLists.txt
core/tools/: host-env.sh  regenerate-dawn.sh
docs/: collider-architecture-consolidation.md  collider-cli-plan.md  nucleus-browser-custom-ui-plan.md  nucleus-browser-plan.md  nucleus-desktop-android-integration-plan.md  nucleus-foundation-follow-up-plan.md  nucleus-runtime-hardening-plan.md  nucleus-ui-api-contract.md  nucleus-ui-foundation-hardening-plan.md  nucleus-ui-graphics-contract.md  nucleus-wayland-compositor-hardening-plan.md  runtime-correctness-and-simplification-plan.md  swift-6-4-modernization-plan.md  swift-toolchain-official-distribution-parity-plan.md
platform-linux/: Package.swift
react-native/: .gitignore  Package.swift  README.md
shell/: .gitignore  Package.swift  README.md
swift-android-sdk/: PLAN.md  README.md  build-macos.sh  build.sh
swift-toolchain/: Package.swift  README.md  apt-deps.txt  build-macos.sh  build.sh  install.sh  nucleus-build-presets-macos.ini  nucleus-build-presets.ini  nucleus-swift-cmake-overrides.cmake  validate-products.py
swift-tracy/: Package.swift  README.md
swift-vulkan/: Package.swift  README.md
swift-wayland/: .gitignore  Package.swift  README.md
tools/: check-api-tiers.sh  collider  host-env.sh  lsan-suppressions.txt  nucleus
(+1443 files in other folders)
